--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<script src="index.js"></script>
+<head>
+<link rel="stylesheet" type="text/css" href="index.css">
+</head>
 <!--The HTML, CSS, and JS is not offical. Source: http://2048game.com/ -->
   <div class="heading">
   <h1 class="title"><a href="/">2048</a></h1>
