--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <div style="margin: 50px">
-
 <!DOCTYPE html>
 <script src="index.js"></script>
 <head>
@@ -60,5 +59,6 @@
   </div>
 
   <div class="tile-container"><div class="tile tile-4 tile-position-3-4 tile-new"><div class="tile-inner">4</div></div><div class="tile tile-2 tile-position-4-1 tile-new"><div class="tile-inner">2</div></div></div>
+</div>
 </div>
 
