--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <a class="restart-button">New Game</a>
   <h2 class="subtitle">Play <strong>2048 Game</strong> Online</h2>
   <div class="above-game">
-    <p>Join the numbers and get to the <strong>2048 tile!</strong></p>
+    <p>Join the musicals and get to the <strong> the tile of my favorite musical!</strong></p>
   </div>
 </div>
 
@@ -60,5 +60,6 @@
   </div>
 
   <div class="tile-container"><div class="tile tile-4 tile-position-3-4 tile-new"><div class="tile-inner">4</div></div><div class="tile tile-2 tile-position-4-1 tile-new"><div class="tile-inner">2</div></div></div>
+<p> Created by Gabriele Cirulli. Based on 1024 by Veewo Studio and conceptually similar to Threes by Asher Vollmer.</p>
 </div>
 
