--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <!--The HTML, CSS, and JS is not offical. Source: http://2048game.com/ -->
   <div class="heading">
-  <h1 class="title"><a href="/">2048</a></h1>
+  <h1 class="title"><a href="/">Musical 2048</a></h1>
   <div class="scores-container">
     <div class="score-container">0</div>
     <div class="best-container">2960</div>
