--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </div>
 <div class="game-intro">
   <a class="restart-button">New Game</a>
-  <h2 class="subtitle">Play <strong>2048 Game</strong> Online</h2>
+  <h2 class="subtitle">Play the <strong>2048 Game</strong> Online</h2>
   <div class="above-game">
     <p>Join the musicals and get to the <strong> the tile of my favorite musical!</strong></p>
   </div>
@@ -62,4 +62,4 @@
   <div class="tile-container"><div class="tile tile-4 tile-position-3-4 tile-new"><div class="tile-inner">4</div></div><div class="tile tile-2 tile-position-4-1 tile-new"><div class="tile-inner">2</div></div></div>
 
 </div>
-<p> 2048 created by Gabriele Cirulli. Based on 1024 by Veewo Studio and conceptually similar to Threes by Asher Vollmer. Photos belong to Playbill.</p>
+<p> Created by Sophie Dvorak using code from 2048, created by Gabriele Cirulli. Based on 1024 by Veewo Studio and conceptually similar to Threes by Asher Vollmer. Photos belong to Playbill.</p>
