--- a/index.html
+++ b/index.html
@@ -62,4 +62,6 @@
   <div class="tile-container"><div class="tile tile-4 tile-position-3-4 tile-new"><div class="tile-inner">4</div></div><div class="tile tile-2 tile-position-4-1 tile-new"><div class="tile-inner">2</div></div></div>
 
 </div>
-<p> Created by Sophie Dvorak using code from 2048, created by Gabriele Cirulli. Based on 1024 by Veewo Studio and conceptually similar to Threes by Asher Vollmer. Photos belong to Playbill.</p>
+<p> Created by Sophie Dvorak using code from 2048, created by Gabriele Cirulli.<p>
+  <p>Based on 1024 by Veewo Studio and conceptually similar to <p>
+    <p>Threes by Asher Vollmer. Photos belong to Playbill.</p>
