--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 
 
 <!DOCTYPE html>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162082804-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-162082804-1');
+</script>
+
 <script src="index.js"></script>
 <head>
 <link rel="stylesheet" type="text/css" href="index.css">
